# poc

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  fix_glibcpp.py  kaze.toml  prj.conf
crates/poc-adapter/: Cargo.toml
crates/poc-adapter/src/: ffi.rs  lib.rs
crates/poc-adapter/src/platform/: mod.rs  zephyr.rs
crates/poc-app/: Cargo.toml
crates/poc-app/src/: lib.rs
crates/poc-core/: Cargo.toml
crates/poc-core/src/: lib.rs
crates/poc-service/: Cargo.toml
crates/poc-service/src/: lib.rs
platform/abi/: abi.cpp  abi.h
platform/include/: abi.h  api.h
platform/src/common/: abi.cpp  sys.cpp
src/: lib.rs
