[package]
name = "poc-app"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
version.workspace = true

description = "Proof-of-concept hub app domain logic"

[dependencies]
poc-core.workspace = true
poc-adapter.workspace = true
poc-service.workspace = true
